[Web] Refactor project structure and paths to linked files

--- a/css/common_elements.less
+++ b/css/common_elements.less
@@ -40,7 +40,7 @@
   }
 
   h1 {
-    .panel_title_css;
+    .panel_title;
   }
 }
 
@@ -62,7 +62,7 @@
   }
 
   h1 {
-    .panel_title_css;
+    .panel_title;
     font-size: @fs_text_title !important;
     font-weight: bold;
   }
@@ -134,7 +134,7 @@
 // -------------------------------------------
 // Оформление заголовка h1 у блока информации
 // -------------------------------------------
-.panel_title_css {
+.panel_title {
   margin: -20px -20px 21px;
   line-height: 40px;
   font-size: @fs_page_title;
