[Web] Add ranks page

--- a/css/pages.less
+++ b/css/pages.less
@@ -1,9 +1,9 @@
 @import "constants.less";
 
 // -------------------------------------
-// players.php
+// players.php ranks.php
 // -------------------------------------
-.players_table {
+.players_table .ranks_table {
   th {
     font-size: @fs_text_title;
   }
