[Web] Add wagc page

--- a/css/common_elements.less
+++ b/css/common_elements.less
@@ -200,3 +200,20 @@
 .color_fill:hover:before {
   left: -50%;
 }
+
+// --------------------------------------------------
+// Оформление таблиц
+// --------------------------------------------------
+.fgb_table {
+  th {
+    font-size: @fs_text_title;
+  }
+
+  td {
+    font-size: @fs_text;
+  }
+
+  .table tbody tr:hover {
+    border: 1.5px solid @select_color;
+  }
+}
