--- a/css/constants.less
+++ b/css/constants.less
@@ -21,6 +21,7 @@
 @inner_block_border_color: #e0eded;
 @inner_block_border: 1px solid @inner_block_border_color;
 
+@select_color: #82b9e8;
 // -----------------------------------------------------------
 // Цвета стран: Беларуси, России и международных соревнований.
 // -----------------------------------------------------------
