[Web] Add eu 19-20 command championship page

--- a/css/tab_page.less
+++ b/css/tab_page.less
@@ -20,7 +20,7 @@
 }
 
 .tabs_panel .tabs_menu div {
-  font-size: @fs_page_title;
+  font-size: @fs_menu_panel_title;
   padding: 15px 20px 15px 40px;
   margin-bottom: 10px;
   border-radius: 2px;
