--- a/css/common_elements.less
+++ b/css/common_elements.less
@@ -217,3 +217,45 @@
     border: 1.5px solid @select_color;
   }
 }
+
+// ----------------------------------------------
+// Оформление карточки истории о го
+// ----------------------------------------------
+.story_card_css {
+
+  padding: 15px;
+  text-align: center;
+  height: 480px;
+  -webkit-transition: all .3s linear;
+  transition: all .3s linear;
+  position: relative;
+  cursor: default;
+  border-radius: 2px;
+  border: @inner_block_border;
+  margin: 0;
+  font-size: @fs_menu_panel_title;
+
+  &:hover {
+    box-shadow: @box_shadow_block;
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
+    line-height: 2;
+  }
+
+  .photo {
+    width: 250px;
+    height: 250px;
+    padding-bottom: 15px;
+    border-radius: 2px;
+  }
+}
+
+.key_word_css {
+  border: 0.0625em solid rgb(206, 205, 208);
+  background: rgba(231, 230, 233, 0.75);
+  padding: 0 5px;
+  margin: 0 2px;
+}
