[Web] Add schools page

--- a/css/common_elements.less
+++ b/css/common_elements.less
@@ -260,6 +260,16 @@
   margin: 0 2px;
 }
 
+// vk иконка на карточках
+.vk_icon_css {
+  margin-top: 10px;
+  border-radius: 2px;
+
+  &:hover {
+    box-shadow: @box_shadow_block;
+  }
+}
+
 // ----------------------------------------------
 // Оформление карточки человека "ЖЗЛ"
 // ----------------------------------------------
@@ -292,15 +302,6 @@
     height: 150px;
     padding-bottom: 15px;
     border-radius: 2px;
-  }
-}
-
-.vk_icon_css {
-  margin-top: 10px;
-  border-radius: 2px;
-
-  &:hover {
-    box-shadow: @box_shadow_block;
   }
 }
 
@@ -339,3 +340,37 @@
   }
 }
 
+// ----------------------------------------------
+// Оформление карточки школы
+// ----------------------------------------------
+.school_card_css {
+
+  padding: 15px;
+  text-align: center;
+  height: 500px;
+  -webkit-transition: all .3s linear;
+  transition: all .3s linear;
+  position: relative;
+  cursor: default;
+  border-radius: 2px;
+  border: @inner_block_border;
+  margin: 0;
+  font-size: @fs_menu_panel_title;
+
+  &:hover {
+    box-shadow: @box_shadow_block;
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
+    line-height: 2;
+  }
+
+  .photo {
+    width: 250px;
+    height: 250px;
+    padding-bottom: 15px;
+    border-radius: 2px;
+  }
+}
