[Web] Add news page

--- a/css/news_pages.less
+++ b/css/news_pages.less
@@ -171,32 +171,26 @@
   .chain_data_news {
     width: 680px;
 
-    .main_news_info_css {
-      margin-bottom: 0px;
+    .news_element {
+      margin: 0px !important;
     }
 
-    .col-md-12 {
-      padding: 0;
-    }
-
-    .news_block {
+    .news_data {
       box-shadow: none !important;
+      margin: 0 !important;
     }
   }
 
   .chain_data_match {
     width: 680px;
 
-    .countries_match_info_css {
-      margin-bottom: 0px;
+    .match_element {
+      margin: 0 !important;
     }
 
-    .col-md-12 {
-      padding: 0;
-    }
-
-    .countries_match_block {
+    .match_data {
       box-shadow: none !important;
+      margin: 0 !important;
     }
   }
 
