--- a/css/common_elements.less
+++ b/css/common_elements.less
@@ -495,3 +495,35 @@
     }
   }
 }
+
+// --------------------------------------------------
+// Оформление новостной страницы
+// --------------------------------------------------
+.news_item_css {
+  margin: 0;
+  padding: 15px;
+
+  .news_item_date {
+    font-size: @fs_text;
+  }
+
+  .news_item_author {
+    font-size: @fs_text;
+    margin-left: 25px;
+  }
+
+  .news_item_address {
+    line-height: 6;
+  }
+
+  .place_icon {
+    height: 72px;
+    width: 72px;
+    border-radius: 36px;
+  }
+
+  .address_text {
+    font-size: @fs_text;
+    padding-left: 10px;
+  }
+}
