--- a/css/sliders/index_slider.less
+++ b/css/sliders/index_slider.less
@@ -1,4 +1,15 @@
 /* jssor slider loading skin spin css */
+
+// slider spin для главной страницы и страниц турниров
+.slider_spin {
+  background: url("../../img/icons/spin.svg") no-repeat;
+  margin-top: -19px;
+  position: relative;
+  top: 50%;
+  width: 38px;
+  height: 38px;
+}
+
 .jssorl-009-spin img {
   animation-name: jssorl-009-spin;
   animation-duration: 10.6s;
