--- a/css/index.less
+++ b/css/index.less
@@ -53,7 +53,7 @@
 // Информационная часть главной страницы
 // -------------------------------------
 .main_info {
-  width: @window_width;
+  width: @window_width !important;
 
   h1 {
     .panel_title;
@@ -75,8 +75,6 @@
     border-left: @border_block;
   }
 }
-
-
 
 // Элемент "турнир"
 .main_tournament_css {
