[Web] Add euc 2020-2021

--- a/css/index.less
+++ b/css/index.less
@@ -67,12 +67,12 @@
   .news_block {
     width: @width_left;
     padding-top: 15px;
+    border-right: @border_block;
   }
 
   .tournaments_block {
     width: @width_right;
     padding-top: 15px;
-    border-left: @border_block;
   }
 }
 
