[Web] Add book page

--- a/css/common_elements.less
+++ b/css/common_elements.less
@@ -161,8 +161,12 @@
   background-image: linear-gradient(to bottom, whiteffd, #eef2f5);
   -webkit-box-shadow: 0 1px whitesmoke;
   box-shadow: 0 1px whitesmoke;
+  cursor: default;
 }
 
+.add_cursor_for_title {
+  cursor: pointer !important;
+}
 // --------------------------------------------------
 // Переходящая цветовая заливка с угловым скруглением
 // --------------------------------------------------
